fixed spacing issue

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -18,7 +18,10 @@ body {
 	font-size: 14px;
 }
 
-
+// this shouldn't be necessary, but it's causing problems
+.one-whole {
+	padding-left: 0px;
+}
 
 .unit-spacing {
 	padding-top: 60px;
@@ -141,7 +144,7 @@ body {
 
 
 #contact-content {
-	 text-align: center;
+	text-align: center;
 }
 
 #contact-text {
@@ -185,14 +188,14 @@ body {
 }
 
 input, textarea {
-    border:0px solid $super-light-gray;
-    padding:5px; 
+	border:0px solid $super-light-gray;
+	padding:5px; 
 }
 
 input:focus, textarea:focus { 
-    outline: none;
-    border-color: $friendly-blue;
-    box-shadow:0 0 10px 4px #9ecaed;
+	outline: none;
+	border-color: $friendly-blue;
+	box-shadow:0 0 10px 4px #9ecaed;
 }
 
 
@@ -266,9 +269,9 @@ input:focus, textarea:focus {
 
 @media (max-width: 750px) {
 
-#photography-header {
-	font-size: 175%;
-}
+	#photography-header {
+		font-size: 175%;
+	}
 
 }
 
@@ -284,7 +287,7 @@ input:focus, textarea:focus {
 	}
 
 	#photography-header {
-	font-size: 165%;
+		font-size: 165%;
 	}
 
 }
@@ -331,13 +334,8 @@ input:focus, textarea:focus {
 	}
 
 	#photography-header {
-	font-size: 250%;
-}
-
-	.grid--item {
-		padding-left: 0px !important;
+		font-size: 250%;
 	}
-
 
 }
 
